--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset=utf-8>
-    <title>Hydna Chat</title>
+    <title>Forum</title>
 
 	<link href="http://code.jquery.com/mobile/latest/jquery.mobile.min.css" rel="stylesheet" type="text/css" />
 	<link href="style/master.css" rel="stylesheet" type="text/css" />
@@ -11,7 +11,7 @@
 	<script src="script/md5.js"></script>
 	<script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 	
-	<script src="script/api.js"></script>
+	<script src="script/forum.js"></script>
 
 	<script src="script/app.js"></script>
 	
@@ -22,7 +22,7 @@
 	<div class="header">
 		<h4>Forum</h4>
 		<div class="profile">
-			<span class="image"><img src="images/profile.jpg" width="40" height="40" /></span>
+			<span class="image"><img src="images/profile.jpg" /></span>
 			<span class="alias"><a href="#">Skaggivara</a></span>
 		</div>
 	</div>
@@ -46,7 +46,7 @@
 	
 	<div class="content">
 		
-		<p class="info">Welcome to the forum, please pick a room from the left or create a new one.</p>
+		<p class="info">Welcome to the forum, please pick a room from the left or <a href="#" class="create-btn">create a new one</a>.</p>
 		
 		<ul>
 			<!--<li>
@@ -66,10 +66,14 @@
 		</ul>
 
 	</div>
+
 	
 	<div class="avatars">
+		<h4>People in this room</h4>
 		<ul>
-			<!--<li><img src="images/profile.jpg" /><span>Some dude</span></li>-->
+			<!--<li data-id="1" data-name="John"><img src="images/profile.jpg" /><span>John</span></li>
+			<li data-id="2" data-name="Isak"><img src="images/profile.jpg" /><span>Isak</span></li>
+			<li data-id="3" data-name="Roger"><img src="images/profile.jpg" /><span>Roger</span></li>-->
 		</ul>
 	</div>
 		
@@ -88,7 +92,7 @@
 <label for="email">e-mail (If you want your <a href="http://gravatar.com">gravatar</a>)</label>
       <input id="email" name"email" class="field" placeholder="enter your email">
       <p class="note">* required</p>
-	<button id="enter">Enter lobby</button>
+	<button id="enter" type="submit">Enter lobby</button>
 	</form>
   </div>
 <div class="create-room">
@@ -96,8 +100,8 @@
 	<form action="." id="create-form">
 		<label for="nick">Room name</label>
       <input id="name" name"name" class="field" placeholder="Enter room name">
-	<button class="create-btn">Create</button>
-	<button class="cancel-btn">Cancel</button>
+	<button type="submit" class="create">Create</button>
+	<button class="cancel">Cancel</button>
 	</form>
 </div>
 
