updated hydna script path

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
     <title>Forum</title>
 	
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=false"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0"/>
 	
 	<link href="http://code.jquery.com/mobile/latest/jquery.mobile.min.css" rel="stylesheet" type="text/css" />
 	<link href="style/master.css" rel="stylesheet" type="text/css" />
-	
-	<script src="script/lib.js"></script>
+
+	<script src="http://cdn.hydna.com/1/hydna.js"></script>
 	<script src="script/md5.js"></script>
 	<script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 	
