Fixed error message bug

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 	<meta name="apple-mobile-web-app-capable" content="yes" /> 
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	
-	<link href="http://code.jquery.com/mobile/latest/jquery.mobile.min.css" rel="stylesheet" type="text/css" />
 	<link href="style/master.css" rel="stylesheet" type="text/css" />
 
 	<script src="http://cdn.hydna.com/1/hydna.js"></script>
 	<script src="script/md5-min.js"></script>
-	<script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 	
 	<script src="script/JSON2-min.js"></script>     
 	<script src="script/forum.js"></script>
@@ -56,7 +55,7 @@
 		
 	<div class="input" id="input_id">
 		<form action="." id="message_form_id">
-			<input id="message_id" name="message" placeholder="Your chat message..."/>
+			<input id="message_input_id" name="message" placeholder="Your chat message..."/>
 		</form>
 	</div>
 
