Updated some copy

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <div class="message" id="message_id">
 	<h4>Some title</h4>
 	<p>Some message..</p>
-	<button class="ok standard-btn">Ok</button>
+	<button class="ok standard-btn">OK</button>
 </div>
 
 </body>
