modified add2 home

--- a/index.html
+++ b/index.html
@@ -25,19 +25,17 @@
 	<script src="script/forum.js"></script>
 	<script src="script/app.js"></script>
 	
-	<script src="script/add2home-min.js"></script>
-	
 	<script type="text/javascript">
 		
 		var addToHomeConfig = {
-			animationIn: 'bubble',
-			animationOut: 'bubble',
-			lifespan:10000,
-			expire:2,
-			touchIcon:true
+			touchIcon:true,
+			lifespan: 10000,
+			animationIn: "bubble"
 		};
 		   
-	</script> 
+	</script>
+	
+	<script src="script/add2home-min.js"></script> 
 	
     
 </head>
